tests/types_mut_bad_readonly_to_mutref_assign.stderr
tests/types_mut_bad_readonly_to_mutref_assign.sl:7:2: error: SL2004: type mismatch
